# otcv8-dev

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_android_assets.ps1  init.lua  test.lua
.github/workflows/: Test.yml  build-on-request.yml  ci-cd.yml  pr-test.yml
android/: .gitignore
android/otclientv8/: otclientv8.androidproj
android/otclientv8/assets/: put_here_data.zip.txt
android/otclientv8_lib/: otclientv8_lib.vcxproj  otclientv8_lib.vcxproj.filters
data/shaders/: outfit_default_fragment.frag  outfit_default_vertex.frag
data/styles/: 40-globalstyles.otui  40-inventory.otui  40-tilewidget.otui
layouts/retro/styles/: 40-inventory.otui
mods/client_autologin/: autologin.lua  autologin.otmod  loginConfigs.json
modules/: game_bot.rar
modules/client/: client.otmod
modules/client_entergame/: characterlist.lua  entergame.lua
modules/client_options/: options.lua  personalization.otui
modules/client_profiles/: profiles.lua  profiles.otmod
modules/corelib/: test.lua
modules/game_actionbar/: actionbar.lua
modules/game_bot/: bot.lua  executor.lua
modules/game_bot/default_configs/cavebot_1.3/: storage.json
modules/game_bot/default_configs/vBot 1.31/: 1_pushmax.lua  2HealBot.lua  __vlib.lua  playerlist.lua
modules/game_bot/default_configs/vBot_1.31/: 0_AAmain.lua  AttackBot.lua  supplies.lua  z_open_doors.lua
modules/game_bot/default_configs/vithrax_1.1/: storage.json
modules/game_bot/default_configs/vithrax_1.3/: 0_BotSever.lua  1_alarms.lua  1_combo.lua  1_pushmax.lua  3_Sio.lua  3_playerlist.lua  AttackBot.otui  BotServer.otui  Castle.lua  Conditions.otui  HealBot.otui  Title.lua  _Conditions.lua  _cavebot.lua  _vlib.lua  alarms.otui  antikick.lua  antipush.lua  bless_buy.lua  combo.otui  equip.lua  jewellery_equipper.lua  kill_steal.lua  oberon.lua  player_list.otui  pushmax.otui  siolist.otui  spy_level.lua  supplies.lua  supplies.otui  use_all.lua  z_click_reuse.lua  z_mwalls.lua  z_npc_talk.lua  z_stake_knife.lua
modules/game_bot/default_configs/vithrax_1.4/: AttackBot.lua  (+9 more)
modules/game_bot/functions/: callbacks.lua
modules/game_console/: console.lua
modules/game_containers/: containers.lua
modules/game_features/: features.lua
modules/game_imbuing/: imbuing.lua  imbuing.otui
modules/game_interface/: gameinterface.lua  interface.otmod
modules/game_market/: market.lua  marketprotocol.lua
modules/game_npctrade/: npctrade.lua
modules/game_prey/: prey.lua  prey.otui
modules/game_protocol/: protocol.lua
modules/game_shaders/: shaders.lua
modules/game_skills/: skills.otui
modules/game_textmessage/: textmessage.lua
modules/game_things/: things.lua
modules/game_topbar/: topbar.otmod  topbar.otui
modules/gamelib/: const.lua  market.lua  spells.lua
src/: main.cpp  otclient.aps  otclient.rc  resource.h
src/client/: CMakeLists.txt  animatedtext.cpp  animatedtext.h  animator.cpp  animator.h  client.cpp  const.h  container.cpp  creature.cpp  creature.h  declarations.h  effect.cpp  effect.h  game.cpp  game.h  global.h  healthbars.cpp  healthbars.h  item.cpp  item.h  lightview.cpp  localplayer.cpp  localplayer.h  luafunctions_client.cpp  luavaluecasts_client.cpp  map.cpp  map.h  mapio.cpp  mapview.cpp  mapview.h  minimap.cpp  missile.cpp  outfit.cpp  outfit.h  protocolcodes.cpp  protocolcodes.h  protocolgame.cpp  protocolgame.h  protocolgameparse.cpp  protocolgamesend.cpp  (+21 more)
src/framework/: CMakeLists.txt  const.h  luafunctions.cpp  pch.h
src/framework/cmake/: FindLibZip.cmake  FindLua.cmake  FindLuaJIT.cmake  FindPhysFS.cmake
src/framework/core/: application.cpp  application.h  clock.h  config.cpp  config.h  configmanager.cpp  eventdispatcher.cpp  eventdispatcher.h  filestream.cpp  filestream.h  graphicalapplication.cpp  graphicalapplication.h  logger.cpp  logger.h  resourcemanager.cpp  resourcemanager.h
src/framework/graphics/: apngloader.cpp  atlas.cpp  bitmapfont.cpp  bitmapfont.h  coordsbuffer.cpp  coordsbuffer.h  declarations.h  drawcache.cpp  drawqueue.cpp  drawqueue.h  fontmanager.cpp  framebuffer.cpp  framebuffer.h  framebuffermanager.cpp  framebuffermanager.h  glutil.h  graph.cpp  graph.h  graphics.cpp  graphics.h  hardwarebuffer.cpp  image.cpp  image.h  painter.cpp  painter.h  paintershaderprogram.cpp  paintershaderprogram.h  shader.cpp  shadermanager.cpp  shaderprogram.cpp  shaderprogram.h  textrender.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  vertexarray.h
src/framework/graphics/shaders/: newshader.h  outfits.h  shaders.h  shadersources.h
src/framework/http/: http.cpp  http.h  result.h  session.cpp  session.h  websocket.cpp  websocket.h
src/framework/input/: mouse.cpp
src/framework/luaengine/: luainterface.cpp  luaobject.cpp
src/framework/net/: connection.cpp  declarations.h  inputmessage.h  outputmessage.cpp  outputmessage.h  packet_player.cpp  packet_player.h  packet_recorder.cpp  packet_recorder.h  protocol.cpp  protocol.h
src/framework/otml/: otmlemitter.cpp  otmlnode.cpp  otmlnode.h
src/framework/platform/: androidplatform.cpp  androidwindow.cpp  androidwindow.h  platformwindow.cpp  platformwindow.h  sdlwindow.h  unixcrashhandler.cpp  unixplatform.cpp  win32crashhandler.cpp  win32platform.cpp  win32window.cpp  win32window.h  x11window.cpp  x11window.h
src/framework/protobuf/: appearances.pb.cc  appearances.pb.h  appearances.proto  shared.pb.cc  shared.pb.h  shared.proto
src/framework/proxy/: proxy.cpp  proxy.h  proxy_client.cpp  proxy_client.h
src/framework/sound/: declarations.h
src/framework/sql/: database.h  declarations.h  mysql.h
src/framework/stdext/: compiler.h
src/framework/ui/: uimanager.cpp  uimanager.h  uitextedit.cpp  uitextedit.h  uiwidget.cpp  uiwidget.h  uiwidgetbasestyle.cpp  uiwidgetimage.cpp  uiwidgettext.cpp
src/framework/util/: crypt.cpp  crypt.h  databuffer.h  pngunpacker.cpp  pngunpacker.h  size.h  stats.cpp  stats.h
tests/: 1098.lua  860.lua
tools/sign/: certificate.pfx
vc16/: otclient.sln  otclient.vcxproj  otclient.vcxproj.filters  settings.props  vcpkg.json
vc16/angle/lib/: libEGL.dll.lib  libGLESv2.dll.lib
(+63 files in other folders)
